# hex

./: .gitignore  .releaserc  Makefile  README.md  pyproject.toml
src/hex/: __init__.py  errors.py  main.py  ui.py
src/hex/graph/: __init__.py  dag.py  local_graph_loader.py  local_provider_loader.py  models.py
tests/integration/ws_simple/: test_ws_simple.py
tests/integration/ws_simple/modules/core/graphs/: call.yaml  main.yaml  user_in.yaml  user_in_socket.yaml
tests/integration/ws_simple/modules/core/providers/: call_subgraph.py  cli_user_input.py  echo.py  socket_client.bash  socket_user_input.py
tests/unit/graph/: test_dag.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: Canvas.tsx  ControlPanel.tsx
ui/src/lib/: models.ts
